# Agent-Hub

./: .env.example  .gitignore  .impeccable.md  README.md  app.yaml  databricks.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.cursor/plans/: ai_hub_multi-lens_review_5632e21b.plan.md
docs/: api-contract.md  design-tokens.md  obo-auth-design.md  rollback-obo-gaps-2026-04-17.md
docs/diagrams/: _export.py  agent-hub-architecture.html  agent-hub-journey.html  scgp-agent-hub-architecture.html  scgp-agent-hub-journey.html
docs/es-tickets/: tiles-api-scope.md
docs/plans/: phase-0-design-and-mockups.md  phase-1-foundation-and-scaffolding.md  phase-2-agent-catalog.md  phase-3-chat-core.md  phase-4-memory-system.md  phase-5-admin-panel.md  phase-6-polish-and-deploy.md
scripts/: audit_agent_types.py  check_contrast.py  check_scopes.py  grant_lakebase_sp.py  screenshots.py
src/agent_hub/: _metadata.py
src/scgp_agent_hub/: _metadata.py
tests/: test_admin_catalog_endpoints.py  test_admin_manual_uc_endpoints.py  test_app_config.py  test_auth_bootstrap.py  test_catalog_service.py  test_catalog_uc_discovery.py  test_catalog_visibility.py  test_chart_service.py  test_charts_route.py  test_chat_streaming.py  test_check_scopes.py  test_display_name.py  test_feature_flags_service.py  test_genie_persistence.py  test_mas_tile_detail.py  test_obo_scope_helpers.py  test_owner_access.py  test_pin_events.py  test_pin_service.py  test_suggestion_service.py
tests/fixtures/: graphql_get_multi_agent_query.json  rest_multi_agent_supervisor.json
(+126 files in other folders)
