[project]
name = "scgp-agent-hub"
version = "0.1.0"
description = "SCGP Agent Chat Hub - Multi-agent catalog with chat and memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "databricks-sdk>=0.74.0",
    "sqlmodel>=0.0.27",
    "psycopg[binary,pool]>=3.2.11",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.apx.metadata]
app-name = "scgp-agent-hub"
app-slug = "scgp_agent_hub"
app-entrypoint = "scgp_agent_hub.backend.app:app"
api-prefix = "/api/v1"
metadata-path = "src/scgp_agent_hub/_metadata.py"

[tool.apx.ui]
root = "src/scgp_agent_hub/ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["src/scgp_agent_hub/__dist__", "src/scgp_agent_hub/_metadata.py"]
exclude = ["src/scgp_agent_hub/ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
